log
15 May 2022 20:23:12: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
39767d4
15 May 2022 20:23:25: 
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d3328c6
15 May 2022 20:23:48: 
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ba10a27
15 May 2022 20:25:52: 
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9e3740d
15 May 2022 20:31:04: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:57:34: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
   57 |         pushBack(list, n->sudo[i][j]);
      |                        ~~~~~~~~~~^~~
      |                                  |
      |                                  int
In file included from test.c:4:
list.h:23:33: note: expected 'void *' but argument is of type 'int'
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
def79c7
15 May 2022 20:32:07: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:57:24: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   57 |         pushBack(list, (int *)n->sudo[i][j]);
      |                        ^
cc1.exe: all warnings being treated as errors
Compilation failed
dc010e4
15 May 2022 20:32:40: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:57:24: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   57 |         pushBack(list, (size_t *)n->sudo[i][j]);
      |                        ^
cc1.exe: all warnings being treated as errors
Compilation failed
2ff8718
15 May 2022 20:33:24: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:57:48: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   57 |         if (n->sudo[i][j] != 0) pushBack(list, (size_t *)n->sudo[i][j]);
      |                                                ^
cc1.exe: all warnings being treated as errors
Compilation failed
2a51c71
15 May 2022 20:34:42: 
 sudoku.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
bd270ba
15 May 2022 20:42:43: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:61:33: error: passing argument 2 of 'pushFront' makes pointer from integer without a cast [-Werror=int-conversion]
   61 |       pushFront(list, n->sudo[0][i]);
      |                       ~~~~~~~~~~^~~
      |                                 |
      |                                 int
In file included from test.c:4:
list.h:22:34: note: expected 'void *' but argument is of type 'int'
   22 | void pushFront(List* list, void* data);
      |                            ~~~~~~^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b640db3
15 May 2022 20:43:17: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:61:23: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   61 |       pushFront(list, (int *)n->sudo[0][i]);
      |                       ^
cc1.exe: all warnings being treated as errors
Compilation failed
fb93742
15 May 2022 20:48:32: 
 sudoku.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
743c9c8
